--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2359,12 +2359,12 @@ input, select, textarea {
 
 		ul.feature-icons li {
 			text-decoration: none;
-			display: inline-block;
+			/*display: inline-block;*/
 			margin: 0 0 1.6875em 0;
 			padding: 0.35em 0 0 3.5em;
 			position: relative;
 			vertical-align: top;
-			width: 48%;
+			/*width: 48%;*/
 		}
 
 			ul.feature-icons li:before {
